--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -9,12 +9,25 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
+              {%if user.is_authenticated%}
+            <li class="nav-item active">
+                <a class="nav-link" href="">HI, {{user.username }} </a>
+            </li>
+            {% endif %}
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'cafea_index' %}">Cafele</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'cafea_index' %}">Aparate</a>
+              <a class="nav-link" href="{% url 'login' %}">LOGIN</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'register' %}">REGISTER</a>
+              </li>
+              {%if user.is_authenticated%}
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+            {% endif %}
           </ul>
         </div>
     </div>
