--- a/coffee/templates/cafea_detail.html
+++ b/coffee/templates/cafea_detail.html
@@ -14,5 +14,48 @@
         <h5>Perfecta pentru:</h5>
         <p>{{ cafea.tip }}</p>
     </div>
+
+    <div class=" col-sm-12">
+        <h2>Comments</h2>
+    
+        {% if user.is_authenticated %}
+          <form action="{% url 'comment_create' cafea.id %}" method="post" class="form-inline justify-content-center">
+            {% csrf_token %}
+            <!--{{ form.as_p }}-->
+            <div class="form-group mx-2">
+              <input class="form-control" type="text" name="text" required="" id="id_text" maxlength="200">
+            </div>
+            <input class="btn btn-secondary" type="submit" value="Comment" />
+          </form>
+        {% endif %}
+    
+        {% if cafea.comments.all %}
+          {% regroup cafea.comments.all|dictsortreversed:"created_at" by created_at as comments %}
+          {% for comment_group in comments %}
+            {% for comment in comment_group.list %}
+            <div class="card m-3">
+    
+              <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                  <p>
+                    {{ comment.text }}
+                    {% if comment.created_at|date:"Y-m-d H:i" !=  comment.updated_at|date:"Y-m-d H:i" %}
+                      <small><i>(edited)</i></small>
+                    {% endif %}
+                  </p>
+                  <footer class="blockquote-footer">commented by
+                    <cite>{{ comment.created_by.username }}</a></cite>
+                    on <cite>{{ comment.created_at }}</cite>
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+            {% endfor%}
+          {% endfor %}
+        {% else %}
+          <p> No comments yet.</p>
+        {% endif %}
+      </div>
+
 </div>
 {% endblock %}
