--- a/coffee/templates/cafea_index.html
+++ b/coffee/templates/cafea_index.html
@@ -10,7 +10,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ cafea.title }}</h5>
                 <p class="card-text">{{ cafea.description }}</p>
-                <a href="{% url 'cafea_detail' cafea.pk %}"
+                <a href="{% url 'cafea_detail' cafea.id %}"
                    class="btn btn-primary">
                     Afla mai multe
                 </a>
